# fritzbox-api

./: .gitignore  README.rst  pyproject.toml
fritzbox/: devices.py  fritzbox.py  utils.py
fritzbox-api/: devices.py  fritzbox.py  streaming_rate.py  utils.py
tests/: test_fritzbox.py
