[tool.poetry]
name = "fritzbox-api"
version = "0.1.0"
description = "REST API implementation for the Fritzbox router"
authors = ["Oskar Herz <herz@gmail.de>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
